--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./sass/variables";
+
+*{
+  box-sizing: border-box;
+}
+html, body{
+  background-color: var(--gris);
+  font-size: 10px;
+  color: var(--text);
+}
+
+h2{
+  color: var(--text-second);
+  margin: calc(var(--cube)*2) 0 var(--cube) 0;
+}
